--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" href="img/pokeball.png" type="image/png">
     <link href="css/style.css" rel="stylesheet" type="text/css">
-    <title>Pokemon</title>
+    <title>Pokedex</title>
 </head>
 
 <body>
-
+<H1 id="arriba">Pokedex</H1>
 </body>
 
 </html>
