--- a/Machamp.html
+++ b/Machamp.html
@@ -4,19 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="icon" href="img/pokeball.png" type="image/png">
+	<link rel="icon" href="img\pokemons\machamp\logo.png" type="image/png">
     <link href="css/style.css" rel="stylesheet" type="text/css">
-    <title>Pokedex</title>
+    <title>Machamp</title>
 </head>
 
-<body>
+<body id="machamp">
+<h1 class="titulos">Machamp</h1>
+<img src="img\pokemons\machamp\machamp.webp" alt="">
+<p>Tipo: <span id="lucha">lucha</span></p>
+<p>Descripción:</p>
+<p>Machamp parece un humano en forma corporal, con 4 brazos, que también tiene en la cabeza tres franjas que aparentan ser pelo, mientras que el área púbica lo 
+    tiene cubierto por un calzón de luchador atado con un cinturón que probablemente dé más estabilidad a su cuerpo.
+</p>
+<br>
 <div class="titulo">
-<H1 id="arriba">Pokedex</H1>
-</div>
-<img src="img/pokedex.png" alt="pokedex">
-<a href="#">Machamp</a>
-<a href="#">Rapidash</a>
-<a href="#">Snorlax</a>
+    <a href="index.html" id="inicio-a">Inicio</a>
+    </div>
 </body>
-
 </html>
