--- a/Rapidash.html
+++ b/Rapidash.html
@@ -4,19 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="icon" href="img/pokeball.png" type="image/png">
+	<link rel="icon" href="img\pokemons\Rapidash\logo.png" type="image/png">
     <link href="css/style.css" rel="stylesheet" type="text/css">
-    <title>Pokedex</title>
+    <title>Rapidash</title>
 </head>
 
-<body>
+<body id="rapidash">
+<h1 class="titulos">Rapidash</h1>
+<img src="img\pokemons\Rapidash\Rapidash.png" alt="">
+<p>Tipo: <span id="Fuego">Fuego</span></p>
+<p>Descripción:</p>
+<p>Está basado en un caballo o un unicornio por el cuerno que tiene en la cabeza. 
+    Su crin y su cola están hechas de fuego pero solo queman a la gente que le dé miedo,
+     también tiene fuego en la parte inferior de las patas.
+</p>
+<br>
 <div class="titulo">
-<H1 id="arriba">Pokedex</H1>
+<a href="index.html" id="inicio-b">Inicio</a>
 </div>
-<img src="img/pokedex.png" alt="pokedex">
-<a href="#">Machamp</a>
-<a href="#">Rapidash</a>
-<a href="#">Snorlax</a>
 </body>
-
 </html>
