--- a/index.html
+++ b/index.html
@@ -9,14 +9,17 @@
     <title>Pokedex</title>
 </head>
 
-<body>
+<body id="index">
 <div class="titulo">
-<H1 id="arriba">Pokedex</H1>
+<H1 id="mmg">Pokedex</H1>
 </div>
 <img src="img/pokedex.png" alt="pokedex">
-<a href="#">Machamp</a>
-<a href="#">Rapidash</a>
-<a href="#">Snorlax</a>
+<br><br>
+<a href="Machamp.html" class="enlaces">Machamp</a>
+<br>
+<a href="Rapidash.html" class="enlaces">Rapidash</a>
+<br>
+<a href="Snorlax.html" class="enlaces">Snorlax</a>
 </body>
 
 </html>
