--- a/Snorlax.html
+++ b/Snorlax.html
@@ -4,19 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="icon" href="img/pokeball.png" type="image/png">
+	<link rel="icon" href="img\pokemons\Snorlax\logo.png" type="image/png">
     <link href="css/style.css" rel="stylesheet" type="text/css">
-    <title>Pokedex</title>
+    <title>Snorlax</title>
 </head>
 
-<body>
+<body id="Snorlax">
+<h1 class="titulos">Snorlax</h1>
+<img id="img" src="img\pokemons\Snorlax\Snorlax.webp" alt="">
+<p>Tipo: <span id="normal">normal</span></p>
+<p>Descripción:</p>
+<p>Snorlax come muchísimos kilos de comida al día. Lo único que hará será echarse a dormir hasta que 
+    vuelva a despertarse por el hambre. Cuando este Pokémon duerme, si por alguna razón lo despiertas, 
+    se enfadará mucho y te atacará ferozmente, aunque después de perseguirte se volverá a dormir. 
+</p>
+<br>
 <div class="titulo">
-<H1 id="arriba">Pokedex</H1>
+<a href="index.html" id="inicio-c">Inicio</a>
 </div>
-<img src="img/pokedex.png" alt="pokedex">
-<a href="#">Machamp</a>
-<a href="#">Rapidash</a>
-<a href="#">Snorlax</a>
 </body>
-
 </html>
