--- a/Snorlax.html
+++ b/Snorlax.html
@@ -11,7 +11,7 @@
 
 <body id="Snorlax">
 <h1 class="titulos">Snorlax</h1>
-<img id="img" src="img\pokemons\Snorlax\Snorlax.webp" alt="">
+<img class="img" src="img\pokemons\Snorlax\Snorlax.webp" alt="">
 <p>Tipo: <span id="normal">normal</span></p>
 <p>Descripción:</p>
 <p>Snorlax come muchísimos kilos de comida al día. Lo único que hará será echarse a dormir hasta que 
