--- a/Machamp.html
+++ b/Machamp.html
@@ -11,7 +11,7 @@
 
 <body id="machamp">
 <h1 class="titulos">Machamp</h1>
-<img class="img" src="img/pokemons/machamp/Machamp.webp" alt="">
+<img class="img" src="img\pokemons\machamp\Machamp.webp" alt="">
 <p>Tipo: <span id="lucha">lucha</span></p>
 <p>Descripción:</p>
 <p>Machamp parece un humano en forma corporal, con 4 brazos, que también tiene en la cabeza tres franjas que aparentan ser pelo, mientras que el área púbica lo 
