--- a/Rapidash.html
+++ b/Rapidash.html
@@ -11,7 +11,7 @@
 
 <body id="rapidash">
 <h1 class="titulos">Rapidash</h1>
-<img class="img" src="img\pokemons\Rapidash\rap.webp" alt="">
+<img class="img" src="img\pokemons\Rapidash\rapidash.png" alt="">
 <p>Tipo: <span id="Fuego">Fuego</span></p>
 <p>Descripción:</p>
 <p>Está basado en un caballo o un unicornio por el cuerno que tiene en la cabeza. 
